# prg-exercise-12

./: README.md  cviceni_12_ekg.ipynb  cviceni_12_uvod.ipynb  pyproject.toml
