[project]
name = "prg-exercise-12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catsay>=1.0.4",
    "cowsay>=6.1",
    "jupyter>=1.1.1",
    "kernel>=0.52.0",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pip>=26.1",
    "restart>=2.6.7",
]
